[package]
name = "cw-storage-gas-meter"
description = "A simple CosmWasm storage gas meter for estimating gas usage from kv store."
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["yoisha <48324733+y-pakorn@users.noreply.github.com>"]
repository = "https://github.com/y-pakorn/cw-storage-gas-meter"

[dependencies]
cosmwasm-std = "1.0.0"

[dev-dependencies]
cw-storage-plus = "0.13.4"
cw-multi-test = "0.13.4"
